<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Polling Unit App</string>
    <string name="voting_here">Voting here? Tell us about it</string>
    <string name="view_others_say">View what others are saying</string>
    <string name="pu_forum">PU Forum</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyBhXh6ibpoYmQIX7ahCQV5pMKKsw3TSRt8</string>
    <string name="whatsHappening">So whats happening at this Polling Unit?</string>
    <string name="searchKeyword">Enter ward, street or landmark</string>

    <string name="structured_review">Pick a Review</string>
    <string-array name="review_arrays">
        <item>Voting is peaceful</item>
        <item>Review 2</item>
        <item>Review 3</item>
        <item>Review 4</item>
        <item>Review 5</item>
        <item>Review 6</item>
        <item>Review 7</item>
        <item>Review 8</item>
    </string-array>


    <string name="gender">Gender</string>
    <string-array name="gender_arrays">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string name="state_search">State</string>
    <string-array name="state_arrays">
        <item>State</item>
        <item>Abia</item>
        <item>Anambara</item>
        <item>Akwa Ibom</item>
    </string-array>

    <string name="LGA_search">State</string>
    <string-array name="LGA_arrays">
        <item>LGA</item>
        <item>LGA1</item>
        <item>LGA2</item>
    </string-array>


</resources>
