<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/whatsHappening"
            android:textColor="#FFFFFF"
            android:background="#800080"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="FCT0101001"
            android:textSize="30dp"
            android:id="@+id/puID_SReview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Located under a mango tree at area 1"
            android:id="@+id/puDESC_SReview"
            android:textSize="20dp"
            android:layout_below="@+id/puID_details"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Spinner
                android:id="@+id/SReview_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/review_arrays"
                android:prompt="@string/structured_review" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/Hide_Unhide_Review"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_review"
                android:hint="Name"
                android:paddingBottom="10dp"/>

            <Spinner
                android:id="@+id/SReviewGenderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_arrays"
                android:prompt="@string/gender" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="POST"
            android:textColor="#FFFFFF"
            android:id="@+id/PostReviewButton"/>
    </LinearLayout>
</LinearLayout>